--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   path_provider: ^2.1.3
-
+  feedback: ^3.1.0
+  url_launcher: ^6.3.0
+  flutter_email_sender: ^6.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
